# assignment-3-soface2026-minik-dalsgaard

./: CMakeLists.txt  README.md
include/: dummy_logger.hpp  file_logger.hpp  int_calculator.hpp  int_calculator_bad.hpp  logger.hpp  print_logger.hpp  template_calculator.hpp
src/: dummy_logger.cpp  file_logger.cpp  int_calculator.cpp  int_calculator_bad.cpp  print_logger.cpp
tests/: CMakeLists.txt
tests/src/: test_int_calculator.cpp  test_int_calculator_bad.cpp  test_logger.cpp  test_template_calculator.cpp
